# KPNBoxAPI

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  configuration_example.py  device_management_example.py  dhcp_configuration_example.py  ethernet_port_configuration_example.py  firewall_configuration_example.py  guest_network_example.py  icmp_example.py  ip_reservation_example.py  ipv6_prefix_delegation_example.py  parental_controls_example.py  port_forwarding_example.py  speedtest_example.py  wifi_configuration_example.py  wifi_mac_filtering_example.py  wifi_management_example.py  wifi_scheduling_example.py  wifi_spectrum_analysis_example.py
src/kpnboxapi/: __init__.py  client.py  exceptions.py
tests/: __init__.py  test_client.py
