[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpnboxapi"
version = "0.1.3"
description = "Python library for interacting with KPN Box modem/router"
authors = [{name = "ssl", email = "git@elyesa.nl"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
keywords = ["kpn", "modem", "router", "api", "networking", "home automation"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ssl/KPNBoxAPI"
Repository = "https://github.com/ssl/KPNBoxAPI.git"
Issues = "https://github.com/ssl/KPNBoxAPI/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 